[tool.poetry]
name = "pin_point"
version = "0.1.0"
description = "Generating and saving line-art"
authors = ["stiffneckjim <22213990+stiffneckjim@users.noreply.github.com>"]
license = "GNU Lesser General Public License v2.1"

[tool.poetry.dependencies]
python = "^3.8"
qahirah = {git = "https://github.com/ldo/qahirah"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
